# solidity-compiler

./: Cargo.toml
src/: consts.rs  generators.rs  lib.rs  tests.rs
src/script_templates/: mod.rs  payments.rs
