[package]
name = "solidity-compiler"
version = "0.1.0"
authors = ["Dmitry Brook <dmitrii_bryuhanov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
reusable-fmt = "0.1.2"

[features]
default = [ "test_generated" ]
test_generated = []
