[package]
name = "solidity-compiler"
version = "0.1.0"
authors = ["Dmitry Brook <dmitrii_bryuhanov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reusable-fmt = { version = "0.2.0", default-features = false }
rsevmasm = { version = "0.5", git = "https://github.com/VKint/rsevmasm", default-features = false }
conquer-once = { version = "0.3", default-features = false }

[features]
default = [ "std", "test_generated" ]
test_generated = []
std = ["conquer-once/std", "rsevmasm/std", "reusable-fmt/std"]
